# liegroups

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
examples/: main.cpp
include/: liegroups.hpp
include/liegroups/: liegroups.hpp  se3.hpp  so3.hpp  utils.hpp
include/liegroups/liegroups/: se3.hpp  so3.hpp  types.hpp  utils.hpp
tests/: liegroups_test.cpp
